--- a/index.html
+++ b/index.html
@@ -4,52 +4,55 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Homepage</title>
-    <!-- bootstrap -->
+    
+    <!-- Bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- css styling -->
+    <!-- External CSS styling -->
     <link rel="stylesheet" href="style/css/main.css">
+    <link rel="stylesheet" href="style/css/animation.css">
     <link rel="stylesheet" href="style/css/page-css/index.css">
 
-    <!-- google fonts -->
+    <!-- Google Fonts links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Header with navbar -->
-    <div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Homepage</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="pages/takehome.html">Take-Home Pay Calculator</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="pages/vacancies.html">Vacancy Search</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <!-- Navbar page links -->
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Homepage</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/takehome.html">Take-Home Pay Calculator</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/vacancies.html">Vacancy Search</a>
+            </li>
+          </ul>
+          <!-- Navbar page links END-->
         </div>
+      </div>
+    </nav>
     <!-- Header END -->
 
+    
     <!-- Hero section with call-to-action -->
     <section class="bg-darkblue py-5"> 
-      <div class="container m-auto row align-items-center vh-50 text-light">
-        <div class="col-sm">
+      <div class="container hero-container m-auto row align-items-center vh-50">
+        <div class="col-sm hero-column text-light animate-fadeUpIn">
           <h1>Find Your Dream Career</h1>
           <p class="fs-5">Discover new vacancies and salaries for jobs you'll love.</p>
         </div>
-        <div class="col-sm fs-4">
+        <div class="col-sm fs-4 text-light animate-fadeLeftIn">
           <p>&#9642; Find out your regular earnings based off of your hourly salary</p>
           <p>&#9642; Find new job opportunities near you</p>
           <p>&#9642; Discover your true potential</p>
@@ -59,25 +62,25 @@
     <!-- Hero section END -->
 
     <!-- Grid info section -->
-    <section class="container">
+    <section class="container py-lg-0 py-4">
       <div class="d-none d-lg-block text-darkblue"> 
         <!-- desktop version for visual appeal - will only show on larger screens -->
         <div class="row">
-          <div class="col-sm text-center m-auto">
+          <div id="d-vacancy-text" class="col-sm text-center m-auto">
             <h2>Search for new jobs now</h2>
             <p>Discover new and emerging job opportunities using our Vacancy Search.</p>
             <p>Get information on job types, titles, companies and more.</p>
             <a class="btn btn-light" href="pages/vacancies.html">Search for Vacancies</a>
           </div>
           <div class="col-sm gray">
-            <img class="d-flex m-auto" src="style/images/test2.jpg" alt="">
+            <img class="d-flex m-auto" src="style/images/vacancy-sm.jpg" alt="Vacancy Search">
           </div>
         </div>
         <div class="row bg-darkblue">
           <div class="col-sm gray">
-            <img class="d-flex m-auto" src="style/images/test.jpg" alt="">
+            <img class="d-flex m-auto" src="style/images/takehome-sm.jpg" alt="Take-Home Pay Calculator">
           </div>
-          <div class="col-sm text-center m-auto text-light">
+          <div class="col-sm text-center m-auto text-light" id="d-takehome-text">
             <h2>Calculate your earnings</h2>
             <p>Find your daily, weekly, monthly and yearly earnings using our take-home pay calculator.</p>
             <a class="btn btn-light" href="pages/takehome.html">Calculate Now</a>
@@ -90,8 +93,8 @@
         <!-- mobile version for readability - text overlay on image card -->
         <!-- will only show on smaller screens -->
         <div class="card border-0">
-          <img src="style/images/test2.jpg" class="card-img-short gray rounded-0" alt="...">
-          <div class="card-body">
+          <img src="style/images/vacancy-sm.jpg" class="card-img-short gray rounded-0" alt="Vacancy Search">
+          <div class="card-body" id="m-vacancy-text">
             <h2 class="card-title">Search for new jobs now</h2>
             <p class="card-text">Discover new and emerging job opportunities using our Vacancy Search.</p>
             <p class="card-text">Get information on job types, titles, companies and more.</p>
@@ -100,8 +103,8 @@
         </div>
 
         <div class="card border-0">
-          <img src="style/images/test.jpg" class="card-img-short gray rounded-0" alt="...">
-          <div class="card-body bg-darkblue text-light">
+          <img src="style/images/takehome-sm.jpg" class="card-img-short gray rounded-0" alt="Take-Home Pay Calculator">
+          <div class="card-body bg-darkblue text-light" id="m-takehome-text">
             <h2 class="card-title">Calculate your earnings</h2>
             <p class="card-text">Find your daily, weekly, monthly and yearly earnings using our take-home pay calculator.</p>
             <a class="btn btn-light" href="pages/takehome.html">Calculate Now</a>
@@ -124,6 +127,10 @@
     </div>
     <!-- footer section END -->
 
+    <script src="/js/animateElement.js"></script>
+    <script src="/js/index.js"></script>
+
+    <!-- Bootstrap JS script for navbar functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
