--- a/pages/takehome.html
+++ b/pages/takehome.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../style/css/main.css">
+    <link rel="stylesheet" href="../style/css/animation.css">
     <link rel="stylesheet" href="../style/css/page-css/takehome.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,30 +15,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- header with navbar -->
-    <div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Homepage</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="takehome.html">Take-Home Pay Calculator</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="vacancies.html">Vacancy Search</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+    <!-- Header with navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <!-- Navbar page links -->
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Homepage</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="takehome.html">Take-Home Pay Calculator</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="vacancies.html">Vacancy Search</a>
+            </li>
+          </ul>
+          <!-- Navbar page links END-->
         </div>
-    <!-- header END -->
+      </div>
+    </nav>
+    <!-- Header END -->
 
     <!-- form section with image bg -->
     <div class="container-img-wrapper text-darkblue takehome-bg px-md-0 p-md-5">
