--- a/pages/vacancies.html
+++ b/pages/vacancies.html
@@ -4,40 +4,44 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Take-Home Pay Calculator</title>
+
+    <!-- Bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- External CSS styling -->
     <link rel="stylesheet" href="../style/css/main.css">
     <link rel="stylesheet" href="../style/css/page-css/vacancies.css">
 
+    <!-- Google Fonts links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- header with navbar -->
-    <section>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Homepage</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="takehome.html">Take-Home Pay Calculator</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="vacancies.html">Vacancy Search</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </section>
-    <!-- header END -->
+    <!-- Header with navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <!-- Navbar page links -->
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Homepage</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="takehome.html">Take-Home Pay Calculator</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="vacancies.html">Vacancy Search</a>
+            </li>
+          </ul>
+          <!-- Navbar page links END-->
+        </div>
+      </div>
+    </nav>
+    <!-- Header END -->
 
     <!-- form section with image bg -->
     <div class="container-img-wrapper vacancy-bg px-md-0 p-md-5">
@@ -73,29 +77,17 @@
     
     <!-- results section - contains user search results, filter form and top 10 vacancies -->
     <div class="container my-4">
-      <div class="row">
-        <div class="col-lg-7" id="search_results_container" hidden>
+      <div class="row text-darkblue">
+        <div class="col-lg-7 py-3" id="search_results_container" hidden>
           <h3 id="search-result-header"></h3>
           <div id="search-loading-container">
             <div class="d-flex justify-content-center">
               <div class="spinner-border" role="status"></div>
             </div>
             <strong class="text-center d-block">Loading...</strong>
-            <small class="d-block mx-5 text-center">If results do not appear after a few seconds, please refresh the page.</small>
+            <small class="d-block mx-5 text-center">If results do not appear after a few seconds, please retry your search.</small>
           </div>
-          <div class="accordion" id="vacancy_search_results">
-            <div class="accordion-item my-3 py-2 border shadow">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  <h4>Title</h4>
-                </button>
-              </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                </div>
-              </div>
-            </div>
+          <div class="accordion py-2" id="vacancy_search_results">
           </div>
         </div>
 
@@ -109,7 +101,7 @@
             <strong class="text-center d-block">Loading...</strong>
             <small class="d-block mx-5 text-center">If results do not appear after a few seconds, please refresh the page.</small>
           </div>
-          <div class="accordion" id="recent_results">
+          <div class="accordion py-2" id="recent_results">
           </div>
         </div>
       </div>
