fixed vacancy search function and added comments to css

--- a/pages/vacancies.html
+++ b/pages/vacancies.html
@@ -76,7 +76,7 @@
     <!-- form section END -->
     
     <!-- results section - contains user search results, filter form and top 10 vacancies -->
-    <div class="container my-4">
+    <section class="container my-4">
       <div class="row text-darkblue">
         <div class="col-lg-7 py-3" id="search_results_container" hidden>
           <h3 id="search-result-header"></h3>
@@ -105,7 +105,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- top 10 recent vacancies END -->
 
     <!-- footer section -->
