--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Find new career and salary opportunities with our free Vacancy Search and Take-Home Pay Calculator.">
     <title>Homepage</title>
     
-    <!-- Bootstrap CSS for styling -->
+    <!-- bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- External CSS styling -->
+    <!-- external CSS styling -->
     <link rel="stylesheet" href="style/css/main.css">
     <link rel="stylesheet" href="style/css/animation.css">
     <link rel="stylesheet" href="style/css/page-css/index.css">
 
-    <!-- Google Fonts links -->
+    <!-- google fonts links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- Header with navbar -->
+    <!-- header with navbar -->
     <header class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headerNavbar" aria-controls="headerNavbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <nav class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <!-- Navbar page links -->
+        <nav id="headerNavbar" class="collapse navbar-collapse">
+          <!-- navbar page links -->
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Homepage</a>
@@ -38,14 +39,14 @@
               <a class="nav-link" href="pages/vacancies.html">Vacancy Search</a>
             </li>
           </ul>
-          <!-- Navbar page links END-->
+          <!-- navbar page links END-->
         </nav>
       </div>
     </header>
-    <!-- Header END -->
+    <!-- header END -->
 
     <main>
-      <!-- Hero section -->
+      <!-- hero section -->
       <section class="bg-darkblue py-5"> 
         <div class="container hero-container m-auto row align-items-center vh-50">
           <div class="col-sm hero-column text-light animate-fadeUpIn">
@@ -59,11 +60,11 @@
           </div>
         </div>
       </section>
-      <!-- Hero section END -->
+      <!-- hero section END -->
 
-      <!-- Grid info section -->
+      <!-- grid info section -->
 
-      <!-- Vacancy section -->
+      <!-- vacancy section -->
       <section class="container py-lg-0 py-4">
         <div class="d-none d-lg-block text-darkblue"> 
           <!-- desktop version for visual appeal - will only show on larger screens -->
@@ -82,7 +83,7 @@
             <div class="col-sm gray">
               <img class="d-flex m-auto" src="style/images/takehome-sm.jpg" alt="Take-Home Pay Calculator">
             </div>
-            <div class="col-sm text-center m-auto text-light" id="d-takehome-text">
+            <div id="d-takehome-text" class="col-sm text-center m-auto text-light">
               <h2>Calculate your earnings</h2>
               <p>Find your daily, weekly, monthly and yearly earnings using our take-home pay calculator.</p>
               <a class="btn btn-light" href="pages/takehome.html">Calculate Now</a>
@@ -90,15 +91,15 @@
           </div>
         </div>
       </section>
-      <!-- Vacancy section END -->
+      <!-- vacancy section END -->
 
-      <!-- Takehome section -->
+      <!-- takehome section -->
       <section class="container d-lg-none"> 
           <!-- mobile version for readability - text overlay on image card -->
           <!-- will only show on smaller screens -->
           <div class="card border-0">
             <img src="style/images/vacancy-sm.jpg" class="card-img-short gray rounded-0" alt="Vacancy Search">
-            <div class="card-body" id="m-vacancy-text">
+            <div id="m-vacancy-text" class="card-body">
               <h2 class="card-title">Search for new jobs now</h2>
               <p class="card-text">Discover new and emerging job opportunities using our Vacancy Search.</p>
               <p class="card-text">Get information on job types, titles, companies and more.</p>
@@ -108,16 +109,16 @@
 
           <div class="card border-0">
             <img src="style/images/takehome-sm.jpg" class="card-img-short gray rounded-0" alt="Take-Home Pay Calculator">
-            <div class="card-body bg-darkblue text-light" id="m-takehome-text">
+            <div id="m-takehome-text" class="card-body bg-darkblue text-light">
               <h2 class="card-title">Calculate your earnings</h2>
               <p class="card-text">Find your daily, weekly, monthly and yearly earnings using our take-home pay calculator.</p>
               <a class="btn btn-light" href="pages/takehome.html">Calculate Now</a>
             </div>
           </div>
       </section>
-      <!-- Takehome section END-->
+      <!-- takehome section END-->
 
-      <!-- Grid info section END -->
+      <!-- grid info section END -->
     </main>
 
     <!-- footer section with links -->
@@ -132,10 +133,8 @@
     </footer>
     <!-- footer section END -->
 
+    <!-- JS scripts -->
     <script src="/js/animateElement.js"></script>
-    <script src="/js/index.js"></script>
-
-    <!-- Bootstrap JS script for navbar functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
