--- a/pages/takehome.html
+++ b/pages/takehome.html
@@ -3,26 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Find out how much you can earn from a new salary using our Take-Home Pay Calculator. Get values for yearly, monthly, weekly and daily salaries.">
     <title>Take-Home Pay Calculator</title>
+
+    <!-- bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- external CSS styling -->
     <link rel="stylesheet" href="../style/css/main.css">
-    <link rel="stylesheet" href="../style/css/animation.css">
     <link rel="stylesheet" href="../style/css/page-css/takehome.css">
 
+    <!-- google fonts links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- Header with navbar -->
+    <!-- header with navbar -->
     <header class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headerNavbar" aria-controls="headerNavbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <nav class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <!-- Navbar page links -->
+        <nav id="headerNavbar" class="collapse navbar-collapse">
+          <!-- navbar page links -->
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="../index.html">Homepage</a>
@@ -34,11 +38,11 @@
               <a class="nav-link" href="vacancies.html">Vacancy Search</a>
             </li>
           </ul>
-          <!-- Navbar page links END-->
+          <!-- navbar page links END-->
         </nav>
       </div>
     </header>
-    <!-- Header END -->
+    <!-- header END -->
 
     <main>
       <!-- form section with image bg -->
@@ -47,16 +51,16 @@
           <div class="row gx-3">
             <div class="col-lg">
               <form id="takehome-form" class="row g-3 p-4 border bg-light m-auto">
-                <h2>Take-Home Pay Calculator</h2>
+                <h1>Take-Home Pay Calculator</h1>
                 <div class="col-12">
                   <label for="job_title" class="form-label">Job Title</label>
-                  <input required type="text" class="form-control" id="job_title" placeholder="1234 Main St">
+                  <input required type="text" id="job_title" class="form-control" placeholder="1234 Main St">
                 </div>
                 <div class="col-md-6">
                   <label for="gross_pay" class="form-label">Gross Pay</label>
                   <div class="input-group">
                     <div class="input-group-text">£</div>
-                    <input required type="number" step="0.01" class="form-control" id="gross_pay" placeholder="3500">
+                    <input required type="number" step="0.01" id="gross_pay" class="form-control" placeholder="3500">
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -71,15 +75,15 @@
 
                 <div class="col-md-4">
                   <label for="hours" class="form-label">Hours per Week</label>
-                  <input required type="number" class="form-control" id="hours">
+                  <input required type="number" id="hours" class="form-control">
                 </div>
                 <div class="col-md-4">
                   <label for="tax" class="form-label">Tax Rate [%]</label>
-                  <input required type="number" step="0.01" class="form-control" id="tax">
+                  <input required type="number" step="0.01" id="tax" class="form-control">
                 </div>
                 <div class="col-md-4">
                   <label for="ni" class="form-label">NI Rate [%]</label>
-                  <input required type="number" step="0.01" class="form-control" id="ni">
+                  <input required type="number" step="0.01" id="ni" class="form-control">
                 </div>
                 <div class="col-12">
                   <button type="submit" class="btn btn-dark bg-darkblue text-light w-100 py-3">Calculate Pay</button>
@@ -87,9 +91,9 @@
               </form>
             </div>
 
-            <section class="col-lg">
-              <article id="takehome_output" class="p-3 border bg-light h-100 p-0 p-5 my-lg-0" hidden></div>
-            </section>
+            <div class="col-lg">
+              <div id="takehome_output" class="p-3 border bg-light h-100 p-0 p-5 my-lg-0" hidden></div>
+            </div>
           </div>
         </div>
       </section>
@@ -108,7 +112,7 @@
     </main>
 
     <!-- footer section -->
-    <section class="bg-darkblue">
+    <div class="bg-darkblue">
       <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 pt-4 border-top text-light">
         <p class="col-md-4 mb-0">© 2024 Zoe Johnston</p>
   
@@ -118,9 +122,11 @@
           <li class="nav-item"><a href="vacancies.html" class="nav-link px-2 text-light">Vacancy Search</a></li>
         </ul>
       </footer>
-    </section>
+    </div>
     <!-- footer section END -->
 
+
+    <!-- JS scripts -->
     <script src="../js/takehome.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
